ereg/tests/eregi_variation_003.out
*** Testing eregi() : usage variations ***
Error: 8 - Undefined variable: undefined_var, /Users/tjerk/Documents/php-bc/ereg/tests/eregi_variation_003.php(61)
Error: 8 - Undefined variable: unset_var, /Users/tjerk/Documents/php-bc/ereg/tests/eregi_variation_003.php(64)

Arg value 0 
Error: 16384 - Function eregi() is deprecated, /Users/tjerk/Documents/php-bc/ereg/ereg.php(108)
int(6)
array(2) {
  [0]=>
  string(6) "hello!"
  [1]=>
  string(2) "el"
}

Arg value 1 
Error: 16384 - Function eregi() is deprecated, /Users/tjerk/Documents/php-bc/ereg/ereg.php(108)
int(6)
array(2) {
  [0]=>
  string(6) "hello!"
  [1]=>
  string(2) "el"
}

Arg value 12345 
Error: 16384 - Function eregi() is deprecated, /Users/tjerk/Documents/php-bc/ereg/ereg.php(108)
int(6)
array(2) {
  [0]=>
  string(6) "hello!"
  [1]=>
  string(2) "el"
}

Arg value -2345 
Error: 16384 - Function eregi() is deprecated, /Users/tjerk/Documents/php-bc/ereg/ereg.php(108)
int(6)
array(2) {
  [0]=>
  string(6) "hello!"
  [1]=>
  string(2) "el"
}

Arg value 10.5 
Error: 16384 - Function eregi() is deprecated, /Users/tjerk/Documents/php-bc/ereg/ereg.php(108)
int(6)
array(2) {
  [0]=>
  string(6) "hello!"
  [1]=>
  string(2) "el"
}

Arg value -10.5 
Error: 16384 - Function eregi() is deprecated, /Users/tjerk/Documents/php-bc/ereg/ereg.php(108)
int(6)
array(2) {
  [0]=>
  string(6) "hello!"
  [1]=>
  string(2) "el"
}

Arg value 101234567000 
Error: 16384 - Function eregi() is deprecated, /Users/tjerk/Documents/php-bc/ereg/ereg.php(108)
int(6)
array(2) {
  [0]=>
  string(6) "hello!"
  [1]=>
  string(2) "el"
}

Arg value 1.07654321E-9 
Error: 16384 - Function eregi() is deprecated, /Users/tjerk/Documents/php-bc/ereg/ereg.php(108)
int(6)
array(2) {
  [0]=>
  string(6) "hello!"
  [1]=>
  string(2) "el"
}

Arg value 0.5 
Error: 16384 - Function eregi() is deprecated, /Users/tjerk/Documents/php-bc/ereg/ereg.php(108)
int(6)
array(2) {
  [0]=>
  string(6) "hello!"
  [1]=>
  string(2) "el"
}

Arg value  
Error: 16384 - Function eregi() is deprecated, /Users/tjerk/Documents/php-bc/ereg/ereg.php(108)
int(6)
array(2) {
  [0]=>
  string(6) "hello!"
  [1]=>
  string(2) "el"
}

Arg value  
Error: 16384 - Function eregi() is deprecated, /Users/tjerk/Documents/php-bc/ereg/ereg.php(108)
int(6)
array(2) {
  [0]=>
  string(6) "hello!"
  [1]=>
  string(2) "el"
}

Arg value 1 
Error: 16384 - Function eregi() is deprecated, /Users/tjerk/Documents/php-bc/ereg/ereg.php(108)
int(6)
array(2) {
  [0]=>
  string(6) "hello!"
  [1]=>
  string(2) "el"
}

Arg value  
Error: 16384 - Function eregi() is deprecated, /Users/tjerk/Documents/php-bc/ereg/ereg.php(108)
int(6)
array(2) {
  [0]=>
  string(6) "hello!"
  [1]=>
  string(2) "el"
}

Arg value 1 
Error: 16384 - Function eregi() is deprecated, /Users/tjerk/Documents/php-bc/ereg/ereg.php(108)
int(6)
array(2) {
  [0]=>
  string(6) "hello!"
  [1]=>
  string(2) "el"
}

Arg value  
Error: 16384 - Function eregi() is deprecated, /Users/tjerk/Documents/php-bc/ereg/ereg.php(108)
int(6)
array(2) {
  [0]=>
  string(6) "hello!"
  [1]=>
  string(2) "el"
}

Arg value  
Error: 16384 - Function eregi() is deprecated, /Users/tjerk/Documents/php-bc/ereg/ereg.php(108)
int(6)
array(2) {
  [0]=>
  string(6) "hello!"
  [1]=>
  string(2) "el"
}

Arg value  
Error: 16384 - Function eregi() is deprecated, /Users/tjerk/Documents/php-bc/ereg/ereg.php(108)
int(6)
array(2) {
  [0]=>
  string(6) "hello!"
  [1]=>
  string(2) "el"
}

Arg value string 
Error: 16384 - Function eregi() is deprecated, /Users/tjerk/Documents/php-bc/ereg/ereg.php(108)
int(6)
array(2) {
  [0]=>
  string(6) "hello!"
  [1]=>
  string(2) "el"
}

Arg value string 
Error: 16384 - Function eregi() is deprecated, /Users/tjerk/Documents/php-bc/ereg/ereg.php(108)
int(6)
array(2) {
  [0]=>
  string(6) "hello!"
  [1]=>
  string(2) "el"
}
Error: 4096 - Object of class stdClass could not be converted to string, /Users/tjerk/Documents/php-bc/ereg/tests/eregi_variation_003.php(70)

Arg value  
Error: 16384 - Function eregi() is deprecated, /Users/tjerk/Documents/php-bc/ereg/ereg.php(108)
int(6)
array(2) {
  [0]=>
  string(6) "hello!"
  [1]=>
  string(2) "el"
}

Arg value  
Error: 16384 - Function eregi() is deprecated, /Users/tjerk/Documents/php-bc/ereg/ereg.php(108)
int(6)
array(2) {
  [0]=>
  string(6) "hello!"
  [1]=>
  string(2) "el"
}

Arg value  
Error: 16384 - Function eregi() is deprecated, /Users/tjerk/Documents/php-bc/ereg/ereg.php(108)
int(6)
array(2) {
  [0]=>
  string(6) "hello!"
  [1]=>
  string(2) "el"
}
Done